Sub items not visible in lower resolutions - Fix for sub-nav getting affected by main-nav - Added correction for nav-item having space between each other

--- a/src/components/main-navigation/style.less
+++ b/src/components/main-navigation/style.less
@@ -18,6 +18,8 @@
 
     primary-items {
       display: inline-block;
+      // We set fontsize 0 to remove extra spaces between nav-item
+      font-size: 0;
     }
     secondary-items {
       display: inline-block;
